--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -164,8 +164,7 @@ jobs:
 
       # Crear/actualizar secrets EC2 usando PAT
       - name: Crear/actualizar secrets EC2 usando PAT
-        if: ${{ steps.ec2-debug.outputs.ec2_host != '' }}  # solo si hay IP pública
-        env:
+        if: ${{ steps.ec2-debug.outputs.ec2_host && steps.ec2-debug.outputs.ec2_host != '' }}
           GH_TOKEN: ${{ secrets.PA_TOKEN }}
         run: |
           set -euo pipefail
@@ -181,7 +180,7 @@ jobs:
 
       # No crear secrets (si no existe instancia)
       - name: No crear secrets (si no existe instancia)
-        if: ${{ steps.ec2-debug.outputs.ec2_host == '' }}
+        if: ${{ !steps.ec2-debug.outputs.ec2_host || steps.ec2-debug.outputs.ec2_host == '' }}
         run: |
           echo "No se detectó IP pública (instance_ip). No se crearon secrets EC2."
         shell: bash
