--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -24,11 +24,18 @@ jobs:
     env:
       TF_BUCKET: ${{ secrets.BACKEND_BUCKET }}
       TF_TABLE: ${{ secrets.BACKEND_TABLE }}
-      TF_REGION: ${{ github.event.inputs.aws_region || secrets.AWS_REGION || 'us-east-1' }}
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Set Terraform region
+        id: set-region
+        run: |
+          REGION="${{ github.event.inputs.aws_region }}"
+          REGION="${REGION:-${{ secrets.AWS_REGION }}}"
+          REGION="${REGION:-us-east-1}"
+          echo "TF_REGION=$REGION" >> "$GITHUB_ENV"
 
       - name: Validar secrets requeridos
         run: |
@@ -100,33 +107,31 @@ jobs:
         run: |
           #!/bin/bash
           set -euo pipefail
-          # Directorio y debug
           pwd
           terraform state list || true
-          # obtener IP (json preferred) con fallback
+
           RAW_IP=$(terraform output -json 2>/dev/null | jq -r '.instance_ip.value // empty' 2>/dev/null || true)
           if [ -z "$RAW_IP" ]; then
             RAW_IP=$(terraform output -raw instance_ip 2>/dev/null || echo "")
           fi
           EC2_HOST=$(echo "$RAW_IP" | grep -oE '([0-9]{1,3}\.){3}[0-9]{1,3}' | head -n1 || true)
-          # obtener AMI (json preferred)
+
           AMI_ID=$(terraform state pull -json 2>/dev/null \
-                  | jq -r '.resources[] 
-                            | select(.type=="aws_instance" and .name=="this") 
-                            | .instances[0].attributes.ami // empty' 2>/dev/null || true)
-          # Fallback si no hay jq o state pull distinto
+                    | jq -r '.resources[] 
+                              | select(.type=="aws_instance" and .name=="this") 
+                              | .instances[0].attributes.ami // empty' 2>/dev/null || true)
           if [ -z "$AMI_ID" ]; then
             AMI_ID=$(terraform state show -no-color aws_instance.this 2>/dev/null \
-                    | sed -n 's/^[[:space:]]*ami *= *"\(.*\)"/\1/p' || true)
+                      | sed -n 's/^[[:space:]]*ami *= *"\(.*\)"/\1/p' || true)
           fi
-          # Region desde entorno (no usar ${{ }})
+
           AWS_REGION="${AWS_REGION:-us-east-1}"
-          # Obtener user desde tag 'User' o por nombre de AMI
           EC2_USER=""
           if [ -n "$AMI_ID" ]; then
             EC2_USER=$(aws ec2 describe-images --image-ids "$AMI_ID" --region "$AWS_REGION" \
                       --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
           fi
+
           if [ -z "${EC2_USER:-}" ] || [ "$EC2_USER" = "None" ]; then
             ami_name=""
             if [ -n "$AMI_ID" ]; then
@@ -143,20 +148,21 @@ jobs:
               *) EC2_USER="ec2-user" ;;
             esac
           fi
-          # Debug final
+
           echo "AMI_ID='$AMI_ID'"
           echo "EC2_HOST='$EC2_HOST'"
           echo "EC2_USER='$EC2_USER'"
-          # Export to GH Actions
+
           echo "ec2_user=${EC2_USER}" >> "$GITHUB_OUTPUT"
           echo "ec2_host=${EC2_HOST}" >> "$GITHUB_OUTPUT"
         shell: bash
 
-      # Crear/actualizar secrets EC2 usando PAT
       - name: Crear/actualizar secrets EC2 usando PAT
+        if: ${{ steps.ec2-debug.outputs.ec2_host != '' }}
         env:
           GH_TOKEN: ${{ secrets.PA_TOKEN }}
-        if: ${{ steps.ec2-debug.outputs.ec2_host != '' }}
+          EC2_USER_VALUE: ${{ steps.ec2-debug.outputs.ec2_user }}
+          EC2_HOST_VALUE: ${{ steps.ec2-debug.outputs.ec2_host }}
         run: |
           set -euo pipefail
           if ! command -v gh >/dev/null 2>&1; then
@@ -167,12 +173,7 @@ jobs:
           gh secret set EC2_USER --body "$EC2_USER_VALUE"
           gh secret set EC2_HOST --body "$EC2_HOST_VALUE"
           echo "Secrets EC2_USER y EC2_HOST creados/actualizados."
-        env:
-          EC2_USER_VALUE: ${{ steps.ec2-debug.outputs.ec2_user }}
-          EC2_HOST_VALUE: ${{ steps.ec2-debug.outputs.ec2_host }}
-        shell: bash
 
-      # No crear secrets (si no existe instancia)
       - name: No crear secrets (si no existe instancia)
         if: ${{ steps.ec2-debug.outputs.ec2_host == '' }}
         run: |
