--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -101,45 +101,38 @@ jobs:
         working-directory: infra/terraform
         shell: bash
 
-      - name: Debug completo de EC2_USER y EC2_HOST
+      - name: Debug y crear secrets EC2
         id: ec2-debug
         working-directory: infra/terraform
+        env:
+          GH_TOKEN: ${{ secrets.PA_TOKEN }}
         run: |
           #!/bin/bash
           set -euo pipefail
+
+          echo "=== Directorio de trabajo ==="
           pwd
+
+          echo "=== Terraform state list ==="
           terraform state list || true
 
-          RAW_IP=$(terraform output -json 2>/dev/null | jq -r '.instance_ip.value // empty' 2>/dev/null || true)
-          if [ -z "$RAW_IP" ]; then
-            RAW_IP=$(terraform output -raw instance_ip 2>/dev/null || echo "")
-          fi
-          EC2_HOST=$(echo "$RAW_IP" | grep -oE '([0-9]{1,3}\.){3}[0-9]{1,3}' | head -n1 || true)
+          # Obtener IP desde output JSON
+          EC2_HOST=$(terraform output -json instance_ip 2>/dev/null | jq -r '.value // empty')
+          echo "EC2_HOST='$EC2_HOST'"
 
-          AMI_ID=$(terraform state pull -json 2>/dev/null \
-                    | jq -r '.resources[] 
-                              | select(.type=="aws_instance" and .name=="this") 
-                              | .instances[0].attributes.ami // empty' 2>/dev/null || true)
-          if [ -z "$AMI_ID" ]; then
-            AMI_ID=$(terraform state show -no-color aws_instance.this 2>/dev/null \
-                      | sed -n 's/^[[:space:]]*ami *= *"\(.*\)"/\1/p' || true)
-          fi
+          # Obtener AMI desde state
+          AMI_ID=$(terraform state show -no-color aws_instance.this 2>/dev/null | sed -n 's/^[[:space:]]*ami *= *"\(.*\)"/\1/p')
+          echo "AMI_ID='$AMI_ID'"
 
-          AWS_REGION="${AWS_REGION:-us-east-1}"
-          EC2_USER=""
-          if [ -n "$AMI_ID" ]; then
-            EC2_USER=$(aws ec2 describe-images --image-ids "$AMI_ID" --region "$AWS_REGION" \
-                      --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
-          fi
+          # Determinar usuario por AMI
+          EC2_USER=$(aws ec2 describe-images --image-ids "$AMI_ID" --region "${AWS_REGION:-us-east-1}" \
+                        --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
 
-          if [ -z "${EC2_USER:-}" ] || [ "$EC2_USER" = "None" ]; then
-            ami_name=""
-            if [ -n "$AMI_ID" ]; then
-              ami_name=$(aws ec2 describe-images --image-ids "$AMI_ID" --region "$AWS_REGION" \
-                        --query 'Images[0].Name' --output text 2>/dev/null || true)
-            fi
-            ami_name_lc=$(echo "${ami_name:-}" | tr '[:upper:]' '[:lower:]' || true)
-            case "$ami_name_lc" in
+          # Fallback simple basado en nombre de AMI si no hay tag
+          if [ -z "$EC2_USER" ] || [ "$EC2_USER" = "None" ]; then
+            ami_name=$(aws ec2 describe-images --image-ids "$AMI_ID" --region "${AWS_REGION:-us-east-1}" \
+                          --query 'Images[0].Name' --output text 2>/dev/null || true)
+            case "${ami_name,,}" in
               *ubuntu*) EC2_USER="ubuntu" ;;
               *amazon*|*amazon-linux*|*amazonlinux*) EC2_USER="ec2-user" ;;
               *debian*) EC2_USER="admin" ;;
@@ -148,34 +141,22 @@ jobs:
               *) EC2_USER="ec2-user" ;;
             esac
           fi
-
-          echo "AMI_ID='$AMI_ID'"
-          echo "EC2_HOST='$EC2_HOST'"
           echo "EC2_USER='$EC2_USER'"
 
-          echo "ec2_user=${EC2_USER}" >> "$GITHUB_OUTPUT"
-          echo "ec2_host=${EC2_HOST}" >> "$GITHUB_OUTPUT"
-        shell: bash
+          # Exportar outputs para steps siguientes
+          echo "ec2_user=$EC2_USER" >> "$GITHUB_OUTPUT"
+          echo "ec2_host=$EC2_HOST" >> "$GITHUB_OUTPUT"
 
-      - name: Crear/actualizar secrets EC2 usando PAT
-        if: ${{ steps.ec2-debug.outputs.ec2_host != '' }}
-        env:
-          GH_TOKEN: ${{ secrets.PA_TOKEN }}
-          EC2_USER_VALUE: ${{ steps.ec2-debug.outputs.ec2_user }}
-          EC2_HOST_VALUE: ${{ steps.ec2-debug.outputs.ec2_host }}
-        run: |
-          set -euo pipefail
-          if ! command -v gh >/dev/null 2>&1; then
-            sudo apt-get update -y
-            sudo apt-get install -y gh
+          # Crear/actualizar secrets si hay IP
+          if [ -n "$EC2_HOST" ]; then
+            echo "Creando/actualizando secrets en GitHub..."
+            if ! command -v gh >/dev/null 2>&1; then
+              sudo apt-get update -y
+              sudo apt-get install -y gh
+            fi
+            gh secret set EC2_USER --body "$EC2_USER"
+            gh secret set EC2_HOST --body "$EC2_HOST"
+            echo "Secrets EC2_USER y EC2_HOST creados/actualizados."
+          else
+            echo "No se detectó IP pública. No se crearon secrets EC2."
           fi
-          echo "Creando/actualizando secrets en GitHub..."
-          gh secret set EC2_USER --body "$EC2_USER_VALUE"
-          gh secret set EC2_HOST --body "$EC2_HOST_VALUE"
-          echo "Secrets EC2_USER y EC2_HOST creados/actualizados."
-
-      - name: No crear secrets (si no existe instancia)
-        if: ${{ steps.ec2-debug.outputs.ec2_host == '' }}
-        run: |
-          echo "No se detectó IP pública (instance_ip). No se crearon secrets EC2."
-        shell: bash
