--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -106,6 +106,7 @@ jobs:
         working-directory: infra/terraform
         env:
           GH_TOKEN: ${{ secrets.PA_TOKEN }}
+          AWS_REGION: ${{ env.TF_REGION }}
         run: |
           #!/bin/bash
           set -euo pipefail
@@ -115,15 +116,16 @@ jobs:
           echo "=== Terraform state list ==="
           terraform state list || true
 
-          # IP directamente desde Terraform output
-          EC2_HOST=$(terraform output -raw instance_ip 2>/dev/null || echo "")
+          # 1️⃣ Obtener la IP desde Terraform output y filtrar solo dígitos/puntos
+          RAW_IP=$(terraform output -raw instance_ip 2>/dev/null || echo "")
+          EC2_HOST=$(echo "$RAW_IP" | grep -oE '([0-9]{1,3}\.){3}[0-9]{1,3}' | head -n1 || true)
           echo "EC2_HOST='$EC2_HOST'"
 
-          # Obtener AMI desde state
+          # 2️⃣ Obtener AMI desde Terraform state
           AMI_ID=$(terraform state show -no-color aws_instance.this 2>/dev/null | sed -n 's/^[[:space:]]*ami *= *"\(.*\)"/\1/p')
           echo "AMI_ID='$AMI_ID'"
 
-          # Determinar usuario por AMI (tag 'User' o nombre)
+          # 3️⃣ Determinar el usuario de la instancia EC2
           EC2_USER=$(aws ec2 describe-images --image-ids "$AMI_ID" --region "${AWS_REGION:-us-east-1}" \
                         --query 'Images[0].Tags[?Key==`User`].Value' --output text 2>/dev/null || true)
 
@@ -141,11 +143,11 @@ jobs:
           fi
           echo "EC2_USER='$EC2_USER'"
 
-          # Exportar outputs para steps siguientes
+          # 4️⃣ Exportar outputs de step para GH Actions
           echo "ec2_user=$EC2_USER" >> "$GITHUB_OUTPUT"
           echo "ec2_host=$EC2_HOST" >> "$GITHUB_OUTPUT"
 
-          # Crear/actualizar secrets si hay IP
+          # 5️⃣ Crear o actualizar secrets en GitHub si hay IP
           if [ -n "$EC2_HOST" ]; then
             echo "Creando/actualizando secrets en GitHub..."
             if ! command -v gh >/dev/null 2>&1; then
