--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,21 @@
 
 # Logs
 *.log
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.env
+**/db.sqlite3
+
+# Docker
+*.log
+*.tmp
+docker-compose.override.yml
+
+# Angular - Node.js
+node_modules/
+dist/
+
