--- a/.github/workflows/ec2-bootstrap.yml
+++ b/.github/workflows/ec2-bootstrap.yml
@@ -32,16 +32,17 @@ jobs:
 
             echo "=== Agregando usuario al grupo docker ==="
             sudo usermod -aG docker $USER
-            newgrp docker
+            # newgrp docker no es confiable en scripts no interactivos
 
             echo "=== Instalando Docker Compose v2 ==="
             DOCKER_COMPOSE_VERSION="v2.20.2"
+            sudo mkdir -p /usr/local/lib/docker/cli-plugins
             sudo curl -L "https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-linux-x86_64" -o /usr/local/lib/docker/cli-plugins/docker-compose
             sudo chmod +x /usr/local/lib/docker/cli-plugins/docker-compose
 
             echo "=== Verificando instalaciones ==="
             git --version
             docker --version
-            docker compose version  # notar sin guion medio
+            docker compose version  # Docker Compose v2 usa espacio, no guion medio
 
             echo "=== Bootstrap completo ==="
