--- a/infra/compose/docker-compose.dev.yml
+++ b/infra/compose/docker-compose.dev.yml
@@ -1,25 +1,25 @@
 services:
   backend:
     build:
-      context: ../backend
+      context: ../../backend
       dockerfile: Dockerfile.dev
     image: ${BACKEND_IMAGE}    # sigue usando la variable del .env
     env_file:
-      - ../.env
+      - ../../.env
     ports:
       - "${BACKEND_PORT}:${BACKEND_PORT}"  # sigue usando la variable del .env
     volumes:
-      - ../backend:/app
+      - ../../backend:/app
       
   frontend:
     build:
-      context: ../frontend
+      context: ../../frontend
       dockerfile: Dockerfile.dev
     image: ${FRONTEND_IMAGE}
     env_file:
-      - ../.env
+      - ../../.env
     ports:
       - "${FRONTEND_PORT}:${FRONTEND_PORT}"
     volumes:
-      - ../frontend:/app
+      - ../../frontend:/app
       - /app/node_modules           # volumen anónimo para preservar node_modules
