--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "mi_app": {
+    "mi-app": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -61,10 +61,10 @@
           "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "mi_app:build:production"
+              "buildTarget": "mi-app:build:production"
             },
             "development": {
-              "buildTarget": "mi_app:build:development"
+              "buildTarget": "mi-app:build:development"
             }
           },
           "defaultConfiguration": "development"
