--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -15,7 +15,7 @@ COPY . ./
 
 # Construir producción en la carpeta correcta
 # Salida: dist/browser/index.html
-RUN npx ng build mi_app \
+RUN npx ng build \
     --configuration production \
     --output-path=dist
 
