--- a/.github/workflows/create-backend.yml
+++ b/.github/workflows/create-backend.yml
@@ -1,7 +1,7 @@
 name: Crear Backend
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -9,6 +9,10 @@ permissions:
 jobs:
   create-backend:
     runs-on: ubuntu-latest
+    outputs:
+      bucket_name: ${{ steps.set-outputs.outputs.bucket }}
+      table_name: ${{ steps.set-outputs.outputs.table }}
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -31,51 +35,60 @@ jobs:
           aws-region: ${{ env.REGION }}
 
       - name: Crear bucket S3 y tabla DynamoDB
-        env:
-          PROJECT: ${{ env.PROJECT }}
-          REGION: ${{ env.REGION }}
-          PA_TOKEN: ${{ secrets.PA_TOKEN }}
+        id: set-outputs
         run: |
           set -euo pipefail
+
           BUCKET="${PROJECT}-backend"
           TABLE="terraform-state-lock"
 
-          # Crear bucket si no existe
-          if ! aws s3api head-bucket --bucket "$BUCKET" 2>/dev/null; then
-            aws s3api create-bucket --bucket "$BUCKET" --region "$REGION" $( [ "$REGION" != "us-east-1" ] && echo "--create-bucket-configuration LocationConstraint=$REGION" )
-            aws s3api put-bucket-encryption --bucket "$BUCKET" --server-side-encryption-configuration '{"Rules":[{"ApplyServerSideEncryptionByDefault":{"SSEAlgorithm":"AES256"}}]}'
-            aws s3api put-bucket-versioning --bucket "$BUCKET" --versioning-configuration Status=Enabled
-            aws s3api put-public-access-block --bucket "$BUCKET" --public-access-block-configuration BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
-            echo "Bucket creado y endurecido: $BUCKET"
-          else
+          echo "Verificando bucket S3..."
+          if aws s3api head-bucket --bucket "$BUCKET" 2>/dev/null; then
             echo "Bucket ya existe: $BUCKET"
+          else
+            echo "Creando bucket S3: $BUCKET"
+            if [ "$REGION" = "us-east-1" ]; then
+              aws s3api create-bucket --bucket "$BUCKET" --region "$REGION"
+            else
+              aws s3api create-bucket --bucket "$BUCKET" --region "$REGION" \
+                --create-bucket-configuration LocationConstraint=$REGION
+            fi
+            aws s3api put-bucket-encryption --bucket "$BUCKET" \
+              --server-side-encryption-configuration '{"Rules":[{"ApplyServerSideEncryptionByDefault":{"SSEAlgorithm":"AES256"}}]}'
+            aws s3api put-bucket-versioning --bucket "$BUCKET" --versioning-configuration Status=Enabled
+            aws s3api put-public-access-block --bucket "$BUCKET" \
+              --public-access-block-configuration BlockPublicAcls=true,IgnorePublicAcls=true,BlockPublicPolicy=true,RestrictPublicBuckets=true
+            echo "Bucket creado y endurecido"
           fi
 
-          # Crear tabla DynamoDB si no existe
-          if ! aws dynamodb describe-table --table-name "$TABLE" >/dev/null 2>&1; then
+          echo "Verificando tabla DynamoDB..."
+          if aws dynamodb describe-table --table-name "$TABLE" >/dev/null 2>&1; then
+            echo "Tabla DynamoDB ya existe: $TABLE"
+          else
+            echo "Creando tabla DynamoDB: $TABLE"
             aws dynamodb create-table \
               --table-name "$TABLE" \
               --attribute-definitions AttributeName=LockID,AttributeType=S \
               --key-schema AttributeName=LockID,KeyType=HASH \
               --provisioned-throughput ReadCapacityUnits=5,WriteCapacityUnits=5 \
               --region "$REGION"
-            echo "Tabla DynamoDB creada: $TABLE"
-          else
-            echo "Tabla DynamoDB ya existe: $TABLE"
+            echo "Tabla DynamoDB creada"
           fi
 
-          # Crear secrets automáticos con PA_TOKEN si existe
-          if [ -n "$PA_TOKEN" ]; then
-            if ! command -v gh >/dev/null 2>&1; then
-              sudo apt-get update -y
-              sudo apt-get install -y gh
-            fi
-            echo "$PA_TOKEN" | gh auth login --with-token
-            gh secret set BACKEND_BUCKET --body "$BUCKET"
-            gh secret set BACKEND_TABLE  --body "$TABLE"
-            echo "Secrets BACKEND_BUCKET y BACKEND_TABLE creados/actualizados."
+          # Exponer outputs para el job
+          echo "bucket=$BUCKET" >> "$GITHUB_OUTPUT"
+          echo "table=$TABLE" >> "$GITHUB_OUTPUT"
+
+      - name: Crear secrets automáticos con PAT (si existe)
+        run: |
+          if [ -n "${{ secrets.PA_TOKEN }}" ]; then
+            echo "Creando secret BACKEND_BUCKET..."
+            gh secret set BACKEND_BUCKET --body "${{ steps.set-outputs.outputs.bucket }}"
+            echo "Creando secret BACKEND_TABLE..."
+            gh secret set BACKEND_TABLE --body "${{ steps.set-outputs.outputs.table }}"
           else
-            echo "No se creó secret: falta PA_TOKEN"
-            echo "BACKEND_BUCKET=$BUCKET"
-            echo "BACKEND_TABLE=$TABLE"
-          fi
+            echo "No hay PAT definido, copia los outputs manualmente para crear los secrets:"
+            echo "  BACKEND_BUCKET -> ${{ steps.set-outputs.outputs.bucket }}"
+            echo "  BACKEND_TABLE  -> ${{ steps.set-outputs.outputs.table }}"
+        env:
+          GH_TOKEN: ${{ secrets.PA_TOKEN }}
